<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact">


    <EditText
        android:id="@+id/etIngreso3"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textAutoCorrect"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:text="@string/security_answer"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="164dp"
        android:layout_height="34dp"
        android:text="Security question"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/etIngreso12"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textAutoCorrect"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/etIngreso15"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textAutoCorrect"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/etIngreso14"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textAutoCorrect"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/etIngreso8"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textPassword"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/etIngreso13"
        android:layout_width="198dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textPassword"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <Button
        android:id="@+id/buttonFinalizar"
        android:layout_width="117dp"
        android:layout_height="63dp"
        android:background="@android:color/transparent"
        android:text="@string/finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Sign up for your new Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="39dp"
        android:layout_height="20dp"
        android:text="User"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="96dp"
        android:layout_height="24dp"
        android:text="Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="171dp"
        android:layout_height="27dp"
        android:text="Confirm Password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

</androidx.constraintlayout.widget.ConstraintLayout>