<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:layout_editor_absoluteY="492dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="553dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="464dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="264dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="232dp"
        android:layout_height="72dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="218dp"
        android:layout_height="27dp"
        android:text="CONTACT"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="31dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/_4" />

    <EditText
        android:id="@+id/etIngreso2"
        android:layout_width="305dp"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@color/colorBackground2"
        android:gravity="left"
        android:inputType="textAutoCorrect"
        android:text="@string/cero"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/_3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/_3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/_3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        app:srcCompat="@drawable/_3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:srcCompat="@drawable/_3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="63dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/_3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:layout_editor_absoluteY="296dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="225dp" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_6"
        tools:layout_editor_absoluteY="428dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="465dp"
        android:layout_height="124dp"
        android:background="#5C6670"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="84dp"
        android:layout_height="65dp"
        android:background="@android:color/transparent"
        android:text="@string/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="117dp"
        android:layout_height="63dp"
        android:background="@android:color/transparent"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/buttonContact"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:background="@android:color/transparent"
        android:text="@string/contacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>